fixed the layout issues and improved small things

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,33 +26,28 @@ a {
 
 .card {
   background-color: #f4f4f4;
-
   width: 28vw;
-
-  min-height: 600px;
+  min-height: 650px;
   margin: 10px;
-  margin-top: 20px;
   display: flex;
-
   box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
- 
-
+}
+.card img{
+  height: 300px;
+  object-fit: cover;
 }
 .recipeWrapper {
   display: flex;
   justify-content: center;
   margin-left: 10px;
+  margin-top:10px;
+
 }
 
 .layout-wrapper{
   display: flex;
-}
 
-.delete-button {
-  color: #a3a3a7;
-  height: 50px;
-  position: absolute;
-  bottom: 20px;
+  
 }
 
 .list-group-item {
@@ -62,7 +57,5 @@ a {
 }
 
 
-.temp-button{
-  margin-left: 200px;
-}
+
 
